[package]
name = "system_alloc_stats"
version = "0.1.0"
edition = "2021"
authors = ["ljedrz <ljedrz@gmail.com>"]
license = "CC0-1.0"
categories  = ["memory-management"]
keywords = ["allocator", "heap", "memory"]
description = "A wrapper exposing some stats for the System allocator."

[features]
fmt = ["dep:humansize", "dep:num-format"]

[dependencies]
humansize = { version = "2", optional = true }
num-format = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
